--- a/src/index.css
+++ b/src/index.css
@@ -18,20 +18,6 @@
   src: url("./assets/fonts/RightGrotesk/RightGrotesk-CompactBlack.otf");
 }
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  background: #181818;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 html {
   overflow-x: hidden;
 }
@@ -44,6 +30,11 @@ body {
   padding: 16px 0 40px 0;
 }
 
+:root {
+  background: #181818;
+  width: 100%;
+}
+
 section {
   width: 100%;
 }
@@ -54,9 +45,14 @@ ul {
 }
 
 h2,
+h3,
 p {
   margin: 0;
   width: fit-content;
+}
+
+a {
+  text-decoration: none;
 }
 
 p {
