--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ body {
 
 section {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 ul {
