--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   align-items: center;
   flex-direction: column;
   padding: 16px 0 40px 0;
-  /* width: 1440px; */
+  overflow: hidden;
 }
 
 :root {
@@ -42,6 +42,7 @@ section {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 1440px;
 }
 
 ul {
