--- a/src/index.css
+++ b/src/index.css
@@ -79,16 +79,16 @@ button {
   border: none;
 }
 
-@media (max-width: 767px) {
-  /* section{
-    max-width: 480px;
-  } */
-
-}
-
 
 @media (max-width: 1279px) {
   section {
     width: 736px;
+  }
+}
+
+
+@media (max-width: 767px) {
+  section {
+    width: 344px;
   }
 }
